Enhance CSS styles and layout for assignment

--- a/CSS Assignment 2.html
+++ b/CSS Assignment 2.html
@@ -9,11 +9,33 @@
   <body>
     <div id="one">
       <div id="two">
-        <div id="content-one">
-          <div id="huckleberry">
-            <a href="./CSS Assignment 2.html">CSS Assignment 2</a>
+        <div id="huckleberry">
+          <h1>Huckleberry</h1>
+          <p class="adjust">
+            An avant-garde agency focused on connecting
+            <strong>passion</strong> with <strong>logistics</strong>.
+          </p>
+          <p class="adjust">A better way to solve the problems of tomorrow.</p>
         </div>
-        <div id="last"></div>
+        <div class="dark">
+          <div id="last">
+            <h2>Wealth comes from operations</h2>
+            <p class="adjust-two">
+              No modern business can thrive without developing a specialization
+              in operations. Huckleberry has helped dozens of companies, from
+              Fortune 50 monoliths to fast-growing Bay Area startups, achieve
+              their goals and meet their KPIs by leveraging our extensive
+              network of logistics experts.
+            </p>
+            <p class="adjust-two">
+              Huckleberry was established in 2003 to help ambitious businesses
+              discover their true potential. If that resonates, let's chat!
+            </p>
+          </div>
+        </div>
+        <div class="dark">
+          <div id="final"></div>
+        </div>
       </div>
     </div>
   </body>
