--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               feet for swimming, and their ability to hold their breath
               underwater.
             </p>
-            <a href="./CSS Assignment 1.html">CSS Assignment 1</a>
+            <button><a href="./CSS Assignment 1.html">CSS Assignment 1</a></button>
           </div>
           <div id="ass-two" class="click">
             <img src="./Assets/Images/CSS image.png" alt="CSS logo" />
@@ -60,7 +60,7 @@
               experts. They support companies from Fortune 50 giants to
               startups.
             </p>
-            <a href="./CSS Assignment 2.html">CSS Assignment 2</a>
+            <button><a href="./CSS Assignment 2.html">CSS Assignment 2</a></button>
           </div>
         </div>
         <div class="set">
@@ -71,7 +71,7 @@
               The Novus Watch Series IV is a Swiss-made, fashion-tech wearable
               inspired by nouveau-deco and brutalism.
             </p>
-            <a href="./CSS Assignment 3.html">CSS Assignment 3</a>
+            <button><a href="./CSS Assignment 3.html">CSS Assignment 3</a></button>
           </div>
           <div id="ass-four" class="click">
             <img src="./Assets/Images/CSS image.png" alt="CSS logo" />
@@ -83,7 +83,7 @@
               details such as their name, gender, date of birth, weight, height,
               activity level, and password to register.
             </p>
-            <a href="./CSS Assignment 4.html">CSS Assignment 4</a>
+            <button><a href="./CSS Assignment 4.html">CSS Assignment 4</a></button>
           </div>
         </div>
       </div>
