Refactor CSS styles for improved layout and responsiveness; update HTML structure for clarity

--- a/CSS Assignment 3.html
+++ b/CSS Assignment 3.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Assignment 3</title>
-    <link rel="stylesheet" href="./Assets/Styles/CSS Ass 3.css">
+    <link rel="stylesheet" href="./Assets/Styles/CSS Ass 3.css" />
   </head>
   <body>
     <div id="background">
-      <div id="new"><h3>New and Improved!</h3></div>
-      <div id="img">
+      <div id="new">
+        <h3>New and Improved!</h3>
         <img src="./Assets/Images/Novus Watch.jpeg" alt="Novus Watch" />
       </div>
       <div id="content">
