Refactor header structure and styles; add responsive design for mobile view

--- a/CSS Assignment 5.html
+++ b/CSS Assignment 5.html
@@ -8,9 +8,13 @@
   </head>
 
   <body>
-    <header>
+    <header id="header-one">
       <div id="content-1">
-        <img src="./Assets/Images/logo (1).png" alt="WP Pusher Logo" id="wp-img" />
+        <img
+          src="./Assets/Images/logo (1).png"
+          alt="WP Pusher Logo"
+          id="wp-img"
+        />
       </div>
       <div id="content-2">
         <a href="./">Download</a>
@@ -18,6 +22,39 @@
         <a href="./">Pricing</a>
         <a href="./">Help</a>
         <a id="account" href="./">Account</a>
+      </div>
+    </header>
+    <header id="header-two">
+      <div id="content-1">
+        <img
+          src="./Assets/Images/logo (1).png"
+          alt="WP Pusher Logo"
+          id="wp-img"
+        />
+      </div>
+      <div>
+        <details>
+          <summary>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              style="fill: rgba(2, 0, 255, 1); transform: ; msfilter: "
+            >
+              <path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path>
+            </svg>
+          </summary>
+          <nav class="menu">
+            <ul>
+              <li><a href="#">Download</a></li>
+              <li><a href="#">Learn more</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Help</a></li>
+              <li><a href="#">Account</a></li>
+            </ul>
+          </nav>
+        </details>
       </div>
     </header>
     <main>
@@ -175,7 +212,7 @@
               <div id="advert">
                 <p>Need <b>20</b> client sites?</p>
               </div>
-              <p  id="agency-plan">
+              <p id="agency-plan">
                 <strong id="agency-plan">Switch to the Agency plan.</strong>
               </p>
 
