--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
               feet for swimming, and their ability to hold their breath
               underwater.
             </p>
-            <button><a href="./CSS Assignment 1.html">CSS Assignment 1</a></button>
+            <button>
+              <a href="./CSS Assignment 1.html">CSS Assignment 1</a>
+            </button>
           </div>
           <div id="ass-two" class="click">
             <img src="./Assets/Images/CSS image.png" alt="CSS logo" />
@@ -60,7 +62,9 @@
               experts. They support companies from Fortune 50 giants to
               startups.
             </p>
-            <button><a href="./CSS Assignment 2.html">CSS Assignment 2</a></button>
+            <button>
+              <a href="./CSS Assignment 2.html">CSS Assignment 2</a>
+            </button>
           </div>
         </div>
         <div class="set">
@@ -71,7 +75,9 @@
               The Novus Watch Series IV is a Swiss-made, fashion-tech wearable
               inspired by nouveau-deco and brutalism.
             </p>
-            <button><a href="./CSS Assignment 3.html">CSS Assignment 3</a></button>
+            <button>
+              <a href="./CSS Assignment 3.html">CSS Assignment 3</a>
+            </button>
           </div>
           <div id="ass-four" class="click">
             <img src="./Assets/Images/CSS image.png" alt="CSS logo" />
@@ -83,7 +89,36 @@
               details such as their name, gender, date of birth, weight, height,
               activity level, and password to register.
             </p>
-            <button><a href="./CSS Assignment 4.html">CSS Assignment 4</a></button>
+            <button>
+              <a href="./CSS Assignment 4.html">CSS Assignment 4</a>
+            </button>
+          </div>
+        </div>
+        <div class="set">
+          <div id="ass-five" class="click">
+            <img src="./Assets/Images/CSS image.png" alt="CSS logo" />
+            <h2>Assignment Five: <br /></h2>
+            <p>
+              A WP Pusher Checkout page that asks for your basic information and
+              payment information so you can purchase a product.
+            </p>
+            <button>
+              <a href="./CSS Assignment 5.html">CSS Assignment 5</a>
+            </button>
+          </div>
+          <div id="ass-six" class="click">
+            <img src="./Assets/Images/CSS image.png" alt="CSS logo" />
+            <h2>Assignment Six: <br /></h2>
+            <p>
+              Scissor is a URL shortening service that allows you to create
+              short, shareable links for your business, events, or personal use.
+              You can shorten URLs, create custom URLs, generate QR codes, and
+              track data analytics for all your links. Scissor has a free plan
+              with basic features, and paid plans for businesses and teams.
+            </p>
+            <button>
+              <a href="./CSS Assignment 6.html">CSS Assignment 6</a>
+            </button>
           </div>
         </div>
       </div>
