--- a/CSS Assignment 6.html
+++ b/CSS Assignment 6.html
@@ -3,9 +3,450 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>CSS Assignment 6</title>
+    <link rel="stylesheet" href="./Assets/Styles/CSS Ass 6.css" />
   </head>
   <body>
-    <h1>Not yet available, Coming Soon!!!</h1>
+    <header id="header-one">
+      <img
+        src="./Assets/Images/Scissors Logo.png"
+        alt="Scissors Logo.png"
+        id="header-logo"
+      />
+      <div id="header-nav">
+        <nav>
+          <ul>
+            <li><a href="#" class="blue-links">My URLs</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Pricing </a></li>
+            <li><a href="#">Analytics</a></li>
+            <li><a href="#">FAQs</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div>
+        <nav>
+          <ul>
+            <li><a href="#" class="blue-links">Login</a></li>
+            <li><a href="#" id="try">Try for free</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <section id="start">
+      <h1>
+        Optimize Your Online Experience with Our Advanced URL Shortening
+        Solution
+      </h1>
+      <p>
+        Personalize your shortened URLs to align with your brand identity.
+        Utilize custom slugs, branded links, and domain customization options to
+        reinforce your brand presence and enhance user engagement.
+      </p>
+      <div id="sign">
+        <button id="signup">Sign up</button>
+        <button id="learn">Learn more</button>
+      </div>
+    </section>
+    <div id="box">
+      <img
+        src="./Assets/Images/shorter link.png"
+        alt="URL Shortening Image"
+        id="shortening"
+      />
+      <p>
+        Seamlessly transform your long URLs into concise and shareable links
+        with just few clicks.
+      </p>
+    </div>
+
+    <section id="rectangle">
+      <img src="./Assets/Images/Ellipse 1.png" alt="Ellipse" id="ellipse" />
+    </section>
+    <section id="one-stop">
+      <div>
+        <h2>
+          One Stop. <br />
+          Four <span>Possibilities</span>.
+        </h2>
+      </div>
+      <div>
+        <h2>3M</h2>
+        <p>Active users</p>
+      </div>
+      <div>
+        <h2>60M</h2>
+        <p>Links & QR codes created</p>
+      </div>
+      <div>
+        <h2>1B</h2>
+        <p>Clicked & Scanned connections</p>
+      </div>
+      <div>
+        <h2>300K</h2>
+        <p>App Integrations</p>
+      </div>
+    </section>
+    <section id="why">
+      <div>
+        <h2>Why Choose <span>Scissors</span></h2>
+        <p>
+          Scissors is the hub of everything that has to do with your link
+          management. We shorten your URLs, allow you creating custom ones for
+          your personal, business, event usage. Our swift QR code creation,
+          management and usage tracking with advance analytics for all of these
+          is second to none.
+        </p>
+      </div>
+      <div id="can-do">
+        <div id="url-features">
+          <div>
+            <img src="./Assets/Images/link-2.png" alt="link" />
+            <h2>URL Shortening</h2>
+            <p>
+              Scissor allows you to shorten URLs of your business, events.
+              Shorten your URL at scale, URL redirects.
+            </p>
+          </div>
+          <div>
+            <img src="./Assets/Images/edit.png" alt="edit" />
+            <h2>Custom URLs</h2>
+            <p>
+              With Scissor, you can create custom URLs, with the length you
+              want! A solution for socials and businesses.
+            </p>
+          </div>
+        </div>
+        <div id="qr">
+          <div>
+            <img src="./Assets/Images/grid.png" alt="grid" />
+            <h2>QR Codes</h2>
+            <p>
+              Generate QR codes to your business, events. Bring your audience
+              and customers to your doorstep with this scan and go solution.
+            </p>
+          </div>
+          <div>
+            <img src="./Assets/Images/activity.png" alt="activity" />
+            <h2>Data Analytics</h2>
+            <p>
+              Receive data on the usage of either your shortened URL, custom
+              URLs or generated QR codes. Embedded to monitor progress.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="perfect">
+      <h2>A <span>price perfect</span> for your needs.</h2>
+      <p>
+        From catering for your personal, business, event, socials needs, you can
+        be rest assured we have you in mind in our pricing.
+      </p>
+    </section>
+    <section id="plans">
+      <div class="basic-teams" id="basic-div">
+        <p id="basic">Basic</p>
+        <h2>Free</h2>
+        <p>Free plan for all users</p>
+        <ul>
+          <li>Unlimited URL Shortening</li>
+          <li>Basic Link Analytics</li>
+          <li>Customizable Short Links</li>
+          <li>Standard Support</li>
+          <li>Ad-supported</li>
+        </ul>
+      </div>
+      <div id="professional">
+        <p id="pro">Professional</p>
+        <h2>$15/month</h2>
+        <p>Ideal for business creators</p>
+        <ul>
+          <li>Enhanced Link Analytics</li>
+          <li>Custom Branded Domains</li>
+          <li>Advanced Link Customization</li>
+          <li>Priority Support</li>
+          <li>Ad-free Experience</li>
+        </ul>
+      </div>
+      <div class="basic-teams">
+        <p id="teams">Teams</p>
+        <h2>$25/month</h2>
+        <p>Share with up to 10 users</p>
+        <ul>
+          <li>Team Collaboration</li>
+          <li>User Roles and Permissions</li>
+          <li>Enhanced Security</li>
+          <li>API Access</li>
+          <li>Dedicated Account Manager</li>
+        </ul>
+      </div>
+    </section>
+    <section id="get-pricing">
+      <button id="get">Get Custom Pricing</button>
+      <button id="pricing">Select Pricing</button>
+    </section>
+    <section id="input-sec">
+      <div id="input-div">
+        <form action="#">
+          <div id="paste-div">
+            <input type="text" placeholder="Paste URL here" id="paste" />
+          </div>
+          <div id="main">
+            <select name="Domain" id="Domain">
+              <option value="Domain">Select Domain</option>
+              <option value="Google.com">Google.com</option>
+              <option value="youtube">YouTube.com</option>
+              <option value="facebook">Facebook.com</option>
+              <option value="twitter">Twitter.com</option>
+              <option value="instagram">Instagram.com</option>
+              <option value="wikipedia">Wikipedia.org</option>
+              <option value="amazon">Amazon.com</option>
+              <option value="netflix">Netflix.com</option>
+              <option value="tiktok">TikTok.com</option>
+              <option value="whatsapp">WhatsApp.com</option>
+            </select>
+            <input type="text" placeholder="Type Alias Here" />
+          </div>
+          <button id="trim">Trim URL</button>
+          <p>
+            By clicking the button, you agree to the
+            <a href="#">Terms of Service,</a><a href="#">Privacy Policy</a> and
+            Use of Cookies.
+          </p>
+        </form>
+      </div>
+    </section>
+    <section id="faq-sec">
+      <div>
+        <h2 id="faq-head">FAQs</h2>
+        <details>
+          <summary>
+            How does URL shortening work? <span class="plus"></span>
+          </summary>
+          <p>
+            URL shortening works by taking a long URL and creating a shorter,
+            condensed version that redirects to the original URL. When a user
+            clicks on the shortened link, they are redirected to the intended
+            destination.
+          </p>
+        </details>
+        <details>
+          <summary>
+            Is it necessary to create an account to use the URL shortening
+            service? <span class="plus"></span>
+          </summary>
+          <p>
+            While you can use basic URL shortening without an account, creating
+            an account gives you access to additional features such as link
+            history, analytics, and custom URLs.
+          </p>
+        </details>
+        <details>
+          <summary>
+            Are the shortened links permanent? Will they expire?
+            <span class="plus"></span>
+          </summary>
+          <p>
+            Our shortened links do not expire by default. They will remain
+            active as long as our service is operational. However, users with
+            accounts have the option to set expiration dates for their links if
+            desired.
+          </p>
+        </details>
+        <details>
+          <summary>
+            Are there any limitations on the number of URLs I can shorten?
+            <span class="plus"></span>
+          </summary>
+          <p>
+            Free users can shorten a limited number of URLs per day. Premium
+            users enjoy higher or unlimited URL shortening capabilities,
+            depending on their subscription plan.
+          </p>
+        </details>
+        <details>
+          <summary>
+            Can I customize the shortened URLs to reflect my brand or content?
+            <span class="plus"></span>
+          </summary>
+          <p>
+            Yes, you can customize the shortened URLs to reflect your brand or
+            content. Our link shortening services allow you to create branded
+            short links, often using your domain name as a base.
+          </p>
+        </details>
+        <details>
+          <summary>
+            Can I track the performance of my shortened URLs?
+            <span class="plus"></span>
+          </summary>
+          <p>
+            Yes, our link shortening services offer robust analytics tools to
+            track the performance of your shortened URLs. You can gain insights
+            into click-through rates, geographic traffic, and other key metrics
+            to optimize your marketing campaigns.
+          </p>
+        </details>
+        <details>
+          <summary>
+            How secure is the URL shortening service? Are the shortened links
+            protected against spam or malicious activity?
+            <span class="plus"></span>
+          </summary>
+          <p>
+            Our reputable link shortening services prioritize security and
+            implement measures to protect your links and user data. They often
+            employ advanced security protocols to prevent spam, malware, and
+            phishing attacks.
+          </p>
+        </details>
+        <details>
+          <summary>
+            What is a QR code and what can it do? <span class="plus"></span>
+          </summary>
+          <p>
+            A QR code (Quick Response code) is a type of two-dimensional barcode
+            that can be scanned by a smartphone camera. When scanned, it
+            typically directs the user to a website, downloads an app, or
+            displays specific information.
+          </p>
+        </details>
+        <details>
+          <summary>
+            Is there an API available for integrating the URL shortening service
+            into my own applications or websites? <span class="plus"></span>
+          </summary>
+          <p>
+            Yes, our URL shortening services offer APIs that you can integrate
+            into your own applications or websites.
+          </p>
+        </details>
+      </div>
+    </section>
+    <section>
+      <div id="rev">
+        <h2 id="revolution">Revolutionizing Link Optimization</h2>
+        <button id="started">Get Started</button>
+      </div>
+    </section>
+    <footer>
+      <div>
+        <img
+          id="footer-logo"
+          src="./Assets/Images/Footer logo.png"
+          alt="Footer logo"
+        />
+      </div>
+      <div id="footer-flex">
+        <div class="footer-align">
+          <div>
+            <nav>
+              <ul>
+                <li>
+                  <a href="#"><b>Why Scissors?</b></a>
+                </li>
+                <li><a href="#">Scissor 101 </a></li>
+                <li><a href="#">Integrations & API</a></li>
+                <li><a href="#">Pricing</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div>
+            <nav>
+              <ul>
+                <li>
+                  <a href="#"><b>Solutions</b></a>
+                </li>
+                <li><a href="#">Social Media</a></li>
+                <li><a href="#">Digital Marketng</a></li>
+                <li><a href="#">Customer Service</a></li>
+                <li><a href="#">For Developers</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div>
+            <nav>
+              <ul>
+                <li>
+                  <a href="#"><b>Products</b></a>
+                </li>
+                <li><a href="#">Link Management</a></li>
+                <li><a href="#">QR Codes</a></li>
+                <li><a href="#">Link-in-bio</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div>
+            <nav>
+              <ul>
+                <li>
+                  <a href="#"><b>Company</b></a>
+                </li>
+                <li><a href="#">About Scissor</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Partners</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Reviews</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="footer-align">
+          <div>
+            <nav>
+              <ul>
+                <li>
+                  <a href="#"><b>Resources</b></a>
+                </li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Resource Library</a></li>
+                <li><a href="#">Developers</a></li>
+                <li><a href="#">App Connectors</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Browser Extention</a></li>
+                <li><a href="#">Mobile App</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div>
+            <nav>
+              <ul>
+                <li>
+                  <a href="#"><b>Features</b></a>
+                </li>
+                <li><a href="#">Branded Links</a></li>
+                <li><a href="#">Mobile Links</a></li>
+                <li><a href="#">Campaign</a></li>
+                <li><a href="#">Management & Analytics</a></li>
+                <li><a href="#">QR Code</a></li>
+                <li><a href="#">Generation</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div>
+            <nav>
+              <ul>
+                <li>
+                  <a href="#"><b>Legal</b></a>
+                </li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Cookie Policy</a></li>
+                <li><a href="#">Terms of Service</a></li>
+                <li><a href="#">Acceptable Use</a></li>
+                <li><a href="#">Policy</a></li>
+                <li><a href="#">Code of Conduct</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div id="copyright">
+          <span class="line">Terms of Service</span>
+          <span class="line">Security</span>
+          <span class="line"> &copy; Scissors 2023 </span>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
